SPOI-13395 : UI Launch View Documentation (#196)
* SPOI-13362 #wip

* Update the Application Configurations page

* Add changes to dtManage page

* Update dtDashboard page

* Update links to #launching-apps

* Update more links

* Update application_configurations.md

* Update dtmanage.md